--- a/src/main/resources/UI/Customer.fxml
+++ b/src/main/resources/UI/Customer.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.TidsrejseagenturetController">
-    <TextField fx:id="kundeNavn" layoutX="87.0" layoutY="150.0" promptText="Fornavn" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.TimeTravelAgencyController">
+    <TextField fx:id="customerNameTextField" layoutX="87.0" layoutY="150.0" promptText="Fornavn" />
     <TextField fx:id="customerEmail" layoutX="87.0" layoutY="200.0" promptText="Email" />
    <Button fx:id="createCustomerButton" layoutX="134.0" layoutY="247.0" mnemonicParsing="false" onAction="#onCreateCustomerButtonClick" text="Opret kunde" />
     <Button fx:id="deleteCustomerButton" layoutX="414.0" layoutY="247.0" mnemonicParsing="false" onAction="#onDeleteCustomerButtonClick" text="Slet" />
